--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
     "expo-font": "~11.4.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
