--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,13 @@
     "expo-camera": "~13.4.4",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
+    "expo-location": "~16.1.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "^7.49.0",
     "react-native": "0.73.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-pager-view": "6.2.0",
